<resources>
    <string name="app_name">Wisape</string>
    <string name="app_none">无</string>

    <string name="gestor_activity_label">Slide Motion</string>

    <!--Login-->
    <string name="login_with_third">"Sign in with the follow apps"</string>

    <!--Main menu -->
    <string name="message_center">Message Center</string>
    <string name="help_center">Help Center</string>
    <string name="clear_buffer">Clear Cache</string>
    <string name="clear_cache_notice_text">Do you sure remove the cache?\nAre you sure you want to
        clear your cache? \n All traces and drafts of your cache will be removed.</string>
    <string name="exit_login">Logout</string>
    <string name="exit_login_notice_text">Do you exit the current account?\n
       Logout will not delete any data.You\ncan still login with this account.</string>
    <string name="my_stores">My Story</string>

    <string name="upload_failure_title">update story failure</string>
    <string name="upload_failure">upload story failure,try again?</string>


    <!-- Photo Selector -->
    <string name="photo_bucket_all">All Photos</string>
    <string name="photo_bucket_list">Album</string>
    <string name="photo_to_buckets">切换到相册</string>
    <string name="photo_menu_buckets">Travel</string>

    <!-- User Profile -->
    <string name="user_profile_label">User Profile</string>

    <string name="add_email">Email Accout</string>

    <!--Sign Up-->
    <string name="sign_up_btn">Login in</string>
    <string name="forget_password">Forget the password?</string>
    <string name="sign_up_email_not_right">Email address is invalid</string>
    <string name="sign_up_password_can_not_null">Password not null</string>
    <string name="sign_up_password_error">Password in invalid</string>

    <!--Reset Password-->
    <string name="password_reset">Next</string>
    <string name="password_reset_label">Password Reset</string>
    <string name="password_reset_success_label">Password Rest Success</string>
    <string name="password_reset_email_account_text">email account:</string>
    <string name="password_reset_notice_text">Please enter your email acount address,\n password reset link will be sent to \n you by email</string>
    <string name="password_reset_success_text_start">The password set link has been sent to \n you </string>
    <string name="password_reset_success_text_end">,\n check the email and click the link to reset your password.</string>
    <!--User Profile-->
    <string name="user_profile_icon_title">Photo</string>
    <string name="user_profile_name_title">User Name</string>
    <string name="user_profile_email_title">Email Account</string>
    <string name="btn_change_email_address">Change email address</string>
    <string name="btn_logout_email_account">Logout email account</string>
    <string name="change_main_text">The information relaled to Wisape and your account will be sent to you. \n\n Change email account,the information will be sent your new email address.
    </string>
    <string name="name_change_email_detail_label">Change Email Address</string>
    <string name="logout_email_account">Logout email account</string>
    <string name="logout_emial_account_content">You may miss important account infomation,and will lower the account</string>
    <string name="change_email_title">Please enter the email address,the information related wo Wisape and your account will be sent to you,and we won\'t send spam</string>
    <!-- About -->
    <string name="about_label">About Wisape</string>
    <string name="about_terms_of_service">Terms of Service</string>
    <string name="about_privacy_policy">Privacy Policies</string>
    <string name="about_copyright">版权政策</string>
    <string name="about_rate">Rate for Wisape</string>
    <string name="about_content">Content Specification</string>
    <string name="about_version_text">version:</string>

    <string name="crop_activity_label">crop</string>

    <!-- Story-->
    <string name="story_settings_label">故事设置</string>
    <string name="story_settings_primary_title">故事基本设置</string>
    <string name="story_settings_other_title">其他</string>
    <string name="story_settings_name_hint">Story Name</string>
    <string name="story_settings_desc_hint">Description</string>
    <string name="story_settings_cover">Share Cover</string>
    <string name="story_settings_music_title">Story Music</string>
    <string name="story_settings_gesture_title">翻页手势</string>
    <string name="story_music_label">Story Music</string>
    <string name="story_music_download_toast">downloading music</string>
    <string name="story_music_download_error">music download error</string>
    <string name="story_release_label">Publish Story</string>
    <string name="story_release_share_title">Share to</string>

    <string name="title_facebook">Facebook</string>
    <string name="title_twitter">Twitter</string>
    <string name="title_messenger">Messenger</string>
    <string name="title_google_plus">Google+</string>
    <string name="title_email">Email</string>
    <string name="title_link">Copy URL</string>
    <string name="title_linkedin">LinkedIn</string>
    <string name="title_qr_code">QR</string>
    <string name="title_sms">SMS</string>
    <string name="title_moments">Moments</string>
    <string name="title_wechat">WeChat</string>
    <string name="title_more">More</string>

    <string name="slide_motion_left">Slide left to next page</string>
    <string name="slide_motion_top">Slide top to next page</string>

    <!--消息中心-->
    <string name="message_center_label">Message Center</string>

    <!--进度对话框资源-->
    <string name="progress_loading_data">Loading Data</string>
    <string name="network_error">Network Error</string>
    <string name="loading_default_story">Loading DefaultStory</string>
    <string name="loading_user_story">Loading UserStory</string>
    <string name="loading_active">Loading active</string>

    <!--确认对话框-->
    <string name="confirm_dialog_cancle">Cancle</string>
    <string name="confirm_dialog_confirm">Confirm</string>

    <!--弹出对话框-->
    <string name="popup_window_result">Result</string>
    <string name="popup_window_priview">Priview</string>
    <string name="popup_window_publish">Publish</string>
    <string name="popup_window_edit">Edit</string>
    <string name="popup_window_delete">Delete</string>
    <string name="delete_story_title">Delete Story</string>
    <string name="delete_story_content">the story will be deleted from the device and can not be recovered</string>

    <string name="category_name_all">All</string>

    <string name="user_register">sign up</string>
    <string name="user_create_account">Create Account</string>
</resources>
