<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/password_reset_notice_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="20dp"
        android:drawableTop="@mipmap/icon_modify_email"
        android:gravity="start"
        android:lineSpacingMultiplier="1.4"
        android:textStyle="bold"
        android:padding="32dp"
        android:text="@string/password_reset_email_account_text"
        android:textSize="@dimen/app_text_size_large"
        android:textColor="@color/app_fourth" />

    <TextView
        android:id="@+id/password_reset_email_account_text"
        style="@style/App.TextStyle.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:layout_marginTop="-50dp"
        android:layout_below="@+id/password_reset_notice_text"
        android:gravity="start"
        android:singleLine="false"
        android:text="@string/change_main_text" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_change_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/password_reset_btn_bg"
            android:text="@string/btn_change_email_address"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_logout_email_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_logout_email_account"
            android:textColor="@color/app_fourth"
            android:background="@drawable/btn_logout_email_account_selector"
            android:textAllCaps="false" />
    </LinearLayout>


</RelativeLayout>